# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "status",
    hdrs = [
        "status.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "testing",
    hdrs = [
        "testing.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":proto",
        ":status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "collections",
    hdrs = [
        "collections.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
    ],
)

cc_library(
    name = "proto",
    srcs = [
        "proto.cc",
    ],
    hdrs = [
        "proto.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":status",
        "@com_google_protobuf//:protobuf",
    ],
)
