# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")
load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")

package(
    licenses = ["notice"],
)

p4_library(
    name = "main_p4info",
    src = "//p4_pdpi/testing/testdata:main.p4",
    p4info_out = "main-p4info.pb.txt",
)

p4_pd_proto(
    name = "main_p4_pd",
    src = "main-p4info.pb.txt",
    out = "main_p4_pd.proto",
    format = False,
    package = "pdpi",
)

proto_library(
    name = "main_p4_pd_proto",
    srcs = ["main_p4_pd.proto"],
    deps = [
        "@com_github_p4lang_p4runtime//:p4runtime_proto",
        "@com_google_googleapis//google/rpc:code_proto",
        "@com_google_googleapis//google/rpc:status_proto",
    ],
)

cc_proto_library(
    name = "main_p4_pd_cc_proto",
    deps = [":main_p4_pd_proto"],
)

diff_test(
    name = "main_pd_test",
    actual = "main_p4_pd.proto",
    expected = "//p4_pdpi/testing/testdata:main_p4_pd.expected",
)

cc_library(
    name = "test_helper",
    testonly = True,
    hdrs = ["test_helper.h"],
    deps = [
        "//gutil:proto",
        "//gutil:status",
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_binary(
    name = "info_test_binary",
    testonly = True,
    srcs = ["info_test.cc"],
    data = ["main-p4info.pb.txt"],
    deps = [
        ":test_helper",
        "//gutil:status",
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cmd_diff_test(
    name = "info_test",
    actual_cmd = "$(execpath :info_test_binary) $(location :main-p4info.pb.txt)",
    expected = "//p4_pdpi/testing/testdata:info.expected",
    tools = [
        "main-p4info.pb.txt",
        ":info_test_binary",
    ],
)

cc_binary(
    name = "rpc_test_binary",
    testonly = True,
    srcs = ["rpc_test.cc"],
    data = ["main-p4info.pb.txt"],
    deps = [
        ":main_p4_pd_cc_proto",
        ":test_helper",
        "//gutil:status",
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "//p4_pdpi:pd",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googleapis//google/rpc:code_cc_proto",
        "@com_google_googleapis//google/rpc:status_cc_proto",
        "@com_google_protobuf//:protobuf",
    ],
)

cmd_diff_test(
    name = "rpc_test",
    actual_cmd = "$(execpath :rpc_test_binary)  $(location :main-p4info.pb.txt)",
    expected = "//p4_pdpi/testing/testdata:rpc.expected",
    tools = [
        "main-p4info.pb.txt",
        ":rpc_test_binary",
    ],
)

cc_binary(
    name = "packet_io_test_binary",
    testonly = True,
    srcs = ["packet_io_test.cc"],
    data = ["main-p4info.pb.txt"],
    deps = [
        ":main_p4_pd_cc_proto",
        ":test_helper",
        "//gutil:status",
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "//p4_pdpi:pd",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cmd_diff_test(
    name = "packet_io_test",
    actual_cmd = "$(execpath :packet_io_test_binary) $(location :main-p4info.pb.txt)",
    expected = "//p4_pdpi/testing/testdata:packet_io.expected",
    tools = [
        "main-p4info.pb.txt",
        ":packet_io_test_binary",
    ],
)

cc_binary(
    name = "table_entry_test_binary",
    testonly = True,
    srcs = ["table_entry_test.cc"],
    deps = [
        ":main_p4_pd_cc_proto",
        ":test_helper",
        "//gutil:status",
        "//gutil:testing",
        "//p4_pdpi:ir",
        "//p4_pdpi:ir_cc_proto",
        "//p4_pdpi:pd",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cmd_diff_test(
    name = "table_entry_test",
    actual_cmd = "$(execpath :table_entry_test_binary) $(location :main-p4info.pb.txt)",
    expected = "//p4_pdpi/testing/testdata:table_entry.expected",
    tools = [
        "main-p4info.pb.txt",
        ":table_entry_test_binary",
    ],
)

cc_test(
    name = "helper_function_test",
    srcs = ["helper_function_test.cc"],
    deps = [
        "main_p4_pd_cc_proto",
        "//gutil:status",
        "//gutil:status_matchers",
        "//gutil:testing",
        "//p4_pdpi:pd",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googleapis//google/rpc:code_cc_proto",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)
