# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
)

load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "annotation_parser",
    srcs = [
        "annotation_parser.cc",
    ],
    hdrs = [
        "annotation_parser.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gutil:status",
        "//p4_pdpi:ir_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_re2//:re2",
    ],
)

cc_test(
    name = "annotation_parser_test",
    srcs = ["annotation_parser_test.cc"],
    deps = [
        ":annotation_parser",
        "//gutil:testing",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "ir",
    srcs = [
        "ir.cc",
    ],
    hdrs = [
        "ir.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gutil:proto",
        "//gutil:status",
        "//p4_pdpi:ir_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "ir_test",
    srcs = ["ir_test.cc"],
    deps = [
        ":ir",
        "//gutil:proto",
        "//gutil:testing",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "pd",
    srcs = [
        "pd.cc",
    ],
    hdrs = [
        "pd.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gutil:proto",
        "//gutil:status",
        "@com_google_absl//absl/algorithm:container",
    ],
)
