load("//p4_pdpi/testing:diff_test.bzl", "cmd_diff_test", "diff_test")
load("//p4_pdpi:pdgen.bzl", "p4_pd_proto")
load("@com_github_p4lang_p4c//:bazel/p4_library.bzl", "p4_library")

exports_files(
    glob([
        "*.expected",
        "*.p4",
    ]),
    licenses = ["notice"],
    visibility = ["//visibility:public"],
)
